使用从私服中获取的工具类，封装返回JSON结果

--- a/SpringBoot-HelloWorld/pom.xml
+++ b/SpringBoot-HelloWorld/pom.xml
@@ -36,6 +36,13 @@
             <optional>true</optional>
         </dependency>
 
+        <!--自己封装的工具工程-->
+        <dependency>
+            <groupId>com.taowd</groupId>
+            <artifactId>springboot-utils</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
