--- a/SpringBoot-FastJson/pom.xml
+++ b/SpringBoot-FastJson/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.taowd</groupId>
-    <artifactId>springboot-helloworld</artifactId>
+    <artifactId>springboot-fastJson</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>springboot-helloworld</name>
-    <description>Spring Boot第一个HelloWorld</description>
+    <name>SpringBoot-FastJson</name>
+    <description>Spring Boot学习使用fastJson框架</description>
 
     <parent>
         <groupId>com.taowd</groupId>
@@ -36,11 +36,19 @@
             <optional>true</optional>
         </dependency>
 
+
         <!--自己封装的工具工程-->
         <dependency>
             <groupId>com.taowd</groupId>
             <artifactId>springboot-utils</artifactId>
             <version>1.0.0</version>
+        </dependency>
+
+        <!--FastJson依赖库-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.44</version>
         </dependency>
 
     </dependencies>
