优化代码结构

--- a/SpringBoot-FastJson/src/main/resources/log4j.properties
+++ b/SpringBoot-FastJson/src/main/resources/log4j.properties
@@ -15,7 +15,7 @@ log4j.appender.dailyFile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dailyFile.encoding=UTF-8
 log4j.appender.dailyFile.Threshold=INFO
 # TODO \u672C\u5730\u65E5\u5FD7\u5730\u5740\uFF0C\u6B63\u5F0F\u73AF\u5883\u8BF7\u52A1\u5FC5\u5207\u6362\u4E3A\u963F\u91CC\u4E91\u5730\u5740
-log4j.appender.dailyFile.File=logs/log.log4j
+log4j.appender.dailyFile.File=logs/spring-learning.log
 #log4j.appender.dailyFile.File=/imooc/logs/log.log4j
 log4j.appender.dailyFile.DatePattern='.'yyyy-MM-dd
 log4j.appender.dailyFile.layout=org.apache.log4j.PatternLayout
