优化代码结构,删掉项目中的工具项目，单独提出重新建立项目，作为以后使用

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--自己封装的工具工程-->
+        <dependency>
+            <groupId>com.taowd</groupId>
+            <artifactId>common-utils</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
