--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>SpringBoot-HelloWorld</module>
         <module>SpringBoot-FastJson</module>
+        <module>SpringBoot-Thymeleaf</module>
     </modules>
 
     <parent>
@@ -51,7 +52,7 @@
             <artifactId>common-utils</artifactId>
             <version>1.0.0</version>
         </dependency>
-        
+
     </dependencies>
 
     <build>
