--- a/SpringBoot-Thymeleaf/src/main/resources/application.properties
+++ b/SpringBoot-Thymeleaf/src/main/resources/application.properties
@@ -11,10 +11,15 @@ server.port=8090
 # thymeleaf \u9759\u6001\u8D44\u6E90\u914D\u7F6E
 #
 ############################################################
+#\u5728\u6784\u5EFAURL\u65F6\u9884\u5148\u67E5\u770B\u540D\u79F0\u7684\u524D\u7F00
 spring.thymeleaf.prefix=classpath:/templates/
+#\u6784\u5EFAURL\u65F6\u9644\u52A0\u67E5\u770B\u540D\u79F0\u7684\u540E\u7F00.
 spring.thymeleaf.suffix=.html
+#\u6A21\u677F\u7F16\u7801
 spring.thymeleaf.mode=HTML5
+#\u9875\u9762\u7F16\u7801\u683C\u5F0F
 spring.thymeleaf.encoding=UTF-8
+#Content-Type\u503C
 spring.thymeleaf.content-type=text/html
 # \u5F00\u53D1\u8FC7\u7A0B\u4E2D\u5173\u95ED\u7F13\u5B58, \u5373\u65F6\u5237\u65B0, \u4E0A\u7EBF\u751F\u4EA7\u73AF\u5883\u9700\u8981\u6539\u4E3Atrue
 spring.thymeleaf.cache=false
