--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,13 @@
         <module>SpringBoot-FastJson</module>
         <module>SpringBoot-Thymeleaf</module>
         <module>springboot-swagger</module>
+        <module>SpringBoot-SpringDataJPA</module>
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.9.RELEASE</version>
+        <version>1.4.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
