--- a/SpringBoot-mybatis/pom.xml
+++ b/SpringBoot-mybatis/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.9</version>
         </dependency>
+        <!--Spring AOP相关 依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
 
     </dependencies>
