--- a/pom.xml
+++ b/pom.xml
@@ -1,87 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.taowd</groupId>
-    <artifactId>springboot-learning</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
+	<groupId>com.taowd</groupId>
+	<artifactId>springboot-learning</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
-    <name>springboot-learning</name>
-    <description>Spring Boot学习项目</description>
+	<name>springboot-learning</name>
+	<description>Spring Boot学习项目</description>
 
-    <modules>
-        <module>SpringBoot-HelloWorld</module>
-        <module>SpringBoot-FastJson</module>
-        <module>SpringBoot-Thymeleaf</module>
-        <module>springboot-swagger</module>
-        <module>SpringBoot-SpringDataJPA</module>
-        <!--全局异常捕获-->
-        <module>SpringBoot-GlobalDefaultExceptionHandler</module>
-        <!--整合jdbcTemplate-->
-        <module>SpringBoot-jdbctemplate</module>
-        <!--整合mybatis-->
-        <module>SpringBoot-mybatis</module>
-        <!--整合Redis-->
-        <module>SpringBoot-Redis</module>
-        <!--整合定时任务Task-->
-        <module>SpringBoot-Task</module>
-    </modules>
+	<modules>
+		<module>SpringBoot-HelloWorld</module>
+		<module>SpringBoot-FastJson</module>
+		<module>SpringBoot-Thymeleaf</module>
+		<module>springboot-swagger</module>
+		<module>SpringBoot-SpringDataJPA</module>
+		<!--全局异常捕获 -->
+		<module>SpringBoot-GlobalDefaultExceptionHandler</module>
+		<!--整合jdbcTemplate -->
+		<module>SpringBoot-jdbctemplate</module>
+		<!--整合mybatis -->
+		<module>SpringBoot-mybatis</module>
+		<!--整合Redis -->
+		<module>SpringBoot-Redis</module>
+		<!--整合定时任务Task -->
+		<module>SpringBoot-Task</module>
+	</modules>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.1.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.4.1.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-    </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+	</properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-        <!--自己封装的工具工程-->
-        <dependency>
-            <groupId>com.taowd</groupId>
-            <artifactId>common-utils</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+		<!--自己封装的工具工程 -->
+		<dependency>
+			<groupId>com.taowd</groupId>
+			<artifactId>common-utils</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 
-        <!--工具类-->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.3.2</version>
-        </dependency>
+		<!--工具类 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
 
-    </dependencies>
+	</dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 
 </project>
