--- a/SpringBoot-HelloWorld/src/main/resources/application.properties
+++ b/SpringBoot-HelloWorld/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 debug=true
 #\u670D\u52A1\u7AEF\u53E3\u53F7
 server.port=8090
+#tomcat\u914D\u7F6E
+#server.tomcat.XX=xx
 
 #\u6D4B\u8BD5SpringBoot\u83B7\u53D6\u914D\u7F6E\u6587\u4EF6\u7684\u914D\u7F6E\u5185\u5BB9
 person.name=\u5F20\u4E09
