--- a/Learning-spring-boot-starter-test/src/main/resources/application.properties
+++ b/Learning-spring-boot-starter-test/src/main/resources/application.properties
@@ -2,5 +2,6 @@
 server.port=9005
 
 #\u81EA\u5B9A\u4E49\u914D\u7F6E\u4E2D\u7684\u53C2\u6570\u8BBE\u7F6E
-taowd.hello.prefix=Spring Boot\u7684\u4E16\u754C\u6B22\u8FCE\u60A8\uFF01
-taowd.hello.suffix=,\u60A8\u5C06\u5B66\u4E60\u5230\u66F4\u591A\u7684\u6280\u672F
+#taowd.hello.prefix=Spring Boot\u7684\u4E16\u754C\u6B22\u8FCE\u60A8\uFF01
+#taowd.hello.suffix=,\u60A8\u5C06\u5B66\u4E60\u5230\u66F4\u591A\u7684\u6280\u672F
+
