--- a/SpringBoot-Starter/Learning-spring-boot-starter/pom.xml
+++ b/SpringBoot-Starter/Learning-spring-boot-starter/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.taowd</groupId>
     <artifactId>springboot-learning</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
   <groupId>com.taowd</groupId>
   <artifactId>learning-spring-boot-starter</artifactId>
